--- a/about.html
+++ b/about.html
@@ -255,11 +255,7 @@
                     <div class="video_wrap text-center">
                         <h3>Enjoy Video</h3>
                         <div class="video_icon">
-                            <a class="popup-video video_play_button" href=<iframe width="956" height="538"
-                                src="https://www.youtube.com/embed/35npVaFGHMY" title="YouTube video player"
-                                frameborder="0"
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                allowfullscreen></iframe>
+                            <a class="popup-video video_play_button" href="https://www.youtube.com/watch?v=35npVaFGHMY">
                                 <i class="fa fa-play"></i>
                             </a>
                         </div>
