--- a/GuideDetails.html
+++ b/GuideDetails.html
@@ -57,9 +57,12 @@
                                 <div class="main-menu  d-none d-lg-block">
                                     <nav>
                                         <ul id="navigation">
-                                            <li><a href="index.html">home</a></li>
-                                            <li><a class="active" href>home</a></li>
+                                            <li><a href="index.html">home</a></li>                                            
                                             <li><a href="about.html">About</a></li>
+                                            <li><a class href="travel_destination.html">Destination</a>
+                                            </li>
+                                            <li><a class href="ViewGuideBookings.html">View Bookings</a>
+                                            </li>
 
                                             <!-- #### LogIn FormatMenu START #### -->
                                             <li id="login"><a style='cursor:pointer' id="btnLogin"
@@ -79,10 +82,7 @@
                                                     </li>
                                             <!-- #### LogIn FormatMenu STOP #### -->
 
-                                            <li><a class href="travel_destination.html">Destination</a>
-                                            </li>
-                                            <li><a class href="ViewGuideBookings.html">View Bookings</a>
-                                            </li>
+                                           
                                             
                                             <!-- <li><a href="#">pages <i class="ti-angle-down"></i></a>
                                                 <ul class="submenu">
@@ -99,7 +99,7 @@
 
                                     <div class="social_links d-none d-xl-block">
                                         <ul>
-                                            <li><a href="#"> <i class="fa fa-instagram"></i> </a></li>
+                                            <li><a href="https://www.instagram.com/touristguide2021/"> <i class="fa fa-instagram"></i> </a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -140,7 +140,17 @@
             </div>
         </div>
     </header>
-
+    <div class="bradcam_area bradcam_bg_2" style='height: 80px !important;'>
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-12">
+                    <div class="bradcam_text text-center">
+                        <h3>Guide details</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class='row' id='mainRow'>
         <div class="col-sm-12 col-lg-12 col-md-12">
             <div id="mainForm" class="container">
