--- a/ViewGuideBookings.html
+++ b/ViewGuideBookings.html
@@ -62,6 +62,8 @@
                                             <li><a href="index.html">home</a></li>
                                             <li><a href="about.html">About</a></li>
                                             <li><a class href="travel_destination.html">Destination</a> </li>
+                                            <li><a class href="ViewGuideBookings.html">ViewGuideBookings</a> </li>
+                                            <li><a class href="GuideDetails.html">GuideDetails</a> </li>
                                             <!-- <li><a href="#">pages <i class="ti-angle-down"></i></a>
                                                 <ul class="submenu">
                                                     <li><a href="destination_details.html">Destinations details</a></li>
