--- a/about.html
+++ b/about.html
@@ -164,6 +164,52 @@
         </div>
     </header>
 
+    <div class='row text-center invisible' id='divSignInWithNumber'>
+        <div class='col-lg-4 col-md-2 col-sm-12'>&nbsp;</div>
+
+        <div class='col-lg-4 col-md-8 col-sm-12 text-center'>
+            <form>
+                <div class="row">
+                    <div class="col-lg-6 col-md-6 col-sm-12">
+                        <div class="row">
+                            <div class="col-sm-12 col-md-10 col-lg-10">
+                                <input class='form-control' input='number' id='txtPhoneNumber' maxlength="10"
+                                    minlength="10" placeholder='Mobile Number (+91)'></input>
+                            </div>
+                            <div class="col-sm-12 col-md-2 col-lg-2">
+                                <div id='captchaContainer'></div>
+                            </div>
+                            <div class="col-sm-12 col-md-6 col-lg-6">
+                                <button id="btnSendOTP" class='btn btn-primary' type='button'>
+                                    Send OTP <i class="fa fa-paper-plane" aria-hidden="true"></i>
+                                </button>
+                            </div>
+
+                        </div>
+
+                    </div>
+                </div>
+            </form>
+            <br>
+            <form>
+                <div class="row">
+                    <div class="col-lg-8 col-md-8 col-sm-12">
+                        <input input='number' id='txtOTP' class='form-control' placeholder='OTP'></input> &nbsp;
+                    </div>
+                    <div class="col-lg-4 col-md-4 col-sm-12">
+                        <button id="btnSignUpUsingNumber" class='btn btn-success' type='button'>
+                            Verify <i class="fa fa-check" aria-hidden="true"></i>
+                        </button>
+                    </div>
+                </div>
+            </form>
+
+
+        </div>
+        <div class='col-lg-4 col-md-2 col-sm-12'>&nbsp;</div>
+
+    </div>
+
 
     <div class="bradcam_area bradcam_bg_3">
         <div class="container">
