--- a/index.html
+++ b/index.html
@@ -171,9 +171,12 @@
                                             <li class="nav-item">
                                                 <a class="nav-link" href="travel_destination.html">Destination</a>
                                             </li>
-                                            <li><a href="ViewMyBookings.html">MyBookings</a></li>
-                                            <li class="nav-item"><a class="nav-link"
-                                                    href="Emergency.html">EmergencyService</a></li>
+                                            <li class="nav-item">
+                                                <a class="nav-link" href="ViewMyBookings.html">MyBookings</a>
+                                            </li>
+                                            <li class="nav-item">
+                                                <a class="nav-link" href="Emergency.html">EmergencyService</a>
+                                            </li>
                                             <!-- #### LogIn FormatMenu START #### -->
                                             <li id="nav-item Username" class='invisible'></li>
                                             <li id="Photo" class='nav-item invisible'>
@@ -206,17 +209,17 @@
                                             </li> -->
                                         </ul>
                                     </nav>
-
-
-
                                 </div>
                             </div>
                             <div class="col-xl-4 col-lg-4 d-none d-lg-block">
                                 <div class="social_wrap d-flex align-items-center justify-content-end">
                                     <div class="social_links d-none d-xl-block">
                                         <ul>
-                                            <li><a href="https://www.instagram.com/touristguide2021/" target="_blank">
-                                                    <i class="fa fa-instagram"></i> </a></li>
+                                            <li>
+                                                <a href="https://www.instagram.com/touristguide2021/" target="_blank">
+                                                    <i class="fa fa-instagram"></i>
+                                                </a>
+                                            </li>
                                         </ul>
                                     </div>
                                 </div>
