--- a/ViewGuideBookings.html
+++ b/ViewGuideBookings.html
@@ -120,7 +120,7 @@
                                         <div class="col-8">
                                             <a class="navbar-brand" href="#">
                                                 <img data-cfsrc="img/TouristLogo.png" alt=""
-                                                    src="http://localhost/travelo/img/TouristLogo.png">
+                                                    src="img/TouristLogo.png">
                                             </a>
                                         </div>
                                         <div class="col-4">
