Added Name Functionality

--- a/about.html
+++ b/about.html
@@ -155,7 +155,7 @@
                                                 <a class="nav-link" href="Emergency.html">EmergencyService</a>
                                             </li>
                                             <!-- #### LogIn FormatMenu START #### -->
-                                            <li id="nav-item Username" class='invisible'></li>
+                                            <li id="Username" class='nav-item  invisible'></li>
                                             <li id="Photo" class='nav-item invisible'>
                                                 <img alt="Profile" height="35px" width='35px' id="dpPhoto">
                                             </li>
