--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@10/dist/sweetalert2.min.css">
 
     <style>
+        .pad5 {
+            padding-top: 5px;
+            padding-bottom: 5px;
+        }
+
         .iFramecontainer {
             position: relative;
             overflow: hidden;
@@ -178,7 +183,7 @@
                                                 <a class="nav-link" href="Emergency.html">EmergencyService</a>
                                             </li>
                                             <!-- #### LogIn FormatMenu START #### -->
-                                            <li id="nav-item Username" class='invisible'></li>
+                                            <li id="Username" class='nav-item  invisible'></li>
                                             <li id="Photo" class='nav-item invisible'>
                                                 <img alt="Profile" height="35px" width='35px' id="dpPhoto">
                                             </li>
@@ -268,33 +273,30 @@
         <div class='col-lg-4 col-md-8 col-sm-12 text-center'>
             <form>
                 <div class="row">
-                    <div class="col-lg-6 col-md-6 col-sm-12">
-                        <div class="row">
-                            <div class="col-sm-12 col-md-10 col-lg-10">
-                                <input class='form-control' input='number' id='txtPhoneNumber' maxlength="10"
-                                    minlength="10" placeholder='Mobile Number (+91)'></input>
-                            </div>
-                            <div class="col-sm-12 col-md-2 col-lg-2">
-                                <div id='captchaContainer'></div>
-                            </div>
-                            <div class="col-sm-12 col-md-6 col-lg-6">
-                                <button id="btnSendOTP" class='btn btn-primary' type='button'>
-                                    Send OTP <i class="fa fa-paper-plane" aria-hidden="true"></i>
-                                </button>
-                            </div>
-
-                        </div>
-
+                    <div class="col-sm-12 col-md-12 col-lg-12 pad5">
+                        <input class='form-control' input='number' id='txtPhoneNumber' maxlength="10" minlength="10"
+                            placeholder='Mobile Number (+91)'></input>
+                    </div>
+                    <div class="col-sm-12 col-md-12 col-lg-12 pad5">
+                        <input class='form-control' input='Name' id='txtName' placeholder='Name'></input>
+                    </div>
+                    <div class="col-sm-12 col-md-12 col-lg-12 pad5">
+                        <div id='captchaContainer'></div>
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-6 pad5">
+                        <button id="btnSendOTP" class='float-left btn btn-primary' type='button'>
+                            Send OTP <i class="fa fa-paper-plane" aria-hidden="true"></i>
+                        </button>
                     </div>
                 </div>
             </form>
             <br>
             <form>
                 <div class="row">
-                    <div class="col-lg-8 col-md-8 col-sm-12">
+                    <div class="col-lg-8 col-md-8 col-sm-12 pad5">
                         <input input='number' id='txtOTP' class='form-control' placeholder='OTP'></input> &nbsp;
                     </div>
-                    <div class="col-lg-4 col-md-4 col-sm-12">
+                    <div class="col-lg-4 col-md-4 col-sm-12 pad5">
                         <button id="btnSignUpUsingNumber" class='btn btn-success' type='button'>
                             Verify <i class="fa fa-check" aria-hidden="true"></i>
                         </button>
