Final Responsive Changes in table

--- a/Emergency.html
+++ b/Emergency.html
@@ -44,6 +44,11 @@
             width: 100%;
             height: 100%;
         }
+
+        .table {
+            table-layout: fixed;
+            word-wrap: break-word;
+        }
     </style>
 
 </head>
@@ -169,151 +174,142 @@
         <div class='col-2'>&nbsp;</div>
     </div>
 
-
-    <div class="limiter">
-        <div class="container-table100">
-            <div class="wrap-table100">
-                <div class="table100 ver1 m-b-110">
-                    <div class="table100-head" id="tblBookedGuideHead">
-                        <table>
-                            <thead>
-                                <tr class="row100 head">
-                                    <th class="cell100 column1">Service Name</th>
-                                    <th class="cell100 column2">Number</th>
-                                </tr>
-                            </thead>
-                        </table>
-                    </div>
-                    <div class="table100-body js-pscroll ps ps--active-y" id="tblBookedGuideBody">
-                        <table id='tblEmergencyNumbers'>
-                            <tbody>
-                                <tr class="row100 body">
-                                    <td class="cell100 column1"> NATIONAL EMERGENCY NUMBER </td>
-                                    <td class="cell100 column2"> 112 </td>
-                                </tr>
-                                <tr class="row100 body">
-                                    <td class="cell100 column1"> POLICE </td>
-                                    <td class="cell100 column2"> 100 </td>
-                                </tr>
-                                <tr class="row100 body">
-                                    <td class="cell100 column1"> FIRE </td>
-                                    <td class="cell100 column2"> 101 </td>
-                                </tr>
-                                <tr class="row100 body">
-                                    <td class="cell100 column1"> AMBULANCE </td>
-                                    <td class="cell100 column2"> 102 </td>
-                                </tr>
-                                <tr class="row100 body">
-                                    <td class="cell100 column1"> Disaster Management Services </td>
-                                    <td class="cell100 column2"> 108 </td>
-                                </tr>
-                                <tr class="row100 body">
-                                    <td class="cell100 column1"> Women Helpline </td>
-                                    <td class="cell100 column2"> 1091 </td>
-                                </tr>
-                                <tr class="row100 body">
-                                    <td class="cell100 column1"> Women Helpline - ( Domestic Abuse ) </td>
-                                    <td class="cell100 column2"> 181 </td>
-                                </tr>
-                                <tr class="row100 body">
-                                    <td class="cell100 column1"> Air Ambulance </td>
-                                    <td class="cell100 column2"> 9540161344 </td>
-                                </tr>
-                                <tr class="row100 body">
-                                    <td class="cell100 column1"> Aids Helpline </td>
-                                    <td class="cell100 column2"> 1097 </td>
-                                </tr>
-                                <tr class="row100 body">
-                                    <td class="cell100 column1"> Anti Poison ( New Delhi ) </td>
-                                    <td class="cell100 column2"> 1066 or 011-1066 </td>
-                                </tr>
-                                <tr class="row100 body">
-                                    <td class="cell100 column1"> Disaster Management ( N.D.M.A ) : 011-26701728 </td>
-                                    <td class="cell100 column2"> 1078 </td>
-                                </tr>
-                                <tr class="row100 body">
-                                    <td class="cell100 column1"> EARTHQUAKE / FLOOD / DISASTER ( N.D.R.F Headquaters )
-                                        NDRF HELPLINE NO : </td>
-                                    <td class="cell100 column2"> 011-24363260 9711077372 </td>
-                                </tr>
-                                <tr class="row100 body">
-                                    <td class="cell100 column1"> Deputy Commissioner Of Police – Missing Child And Women
-                                    </td>
-                                    <td class="cell100 column2"> 1094 </td>
-                                </tr>
-                                <tr class="row100 body">
-                                    <td class="cell100 column1"> Railway Enquiry </td>
-                                    <td class="cell100 column2"> 139 </td>
-                                </tr>
-                                <tr class="row100 body">
-                                    <td class="cell100 column1"> Senior Citizen Helpline </td>
-                                    <td class="cell100 column2"> 1091 , 1291 </td>
-                                </tr>
-                                <tr class="row100 body">
-                                    <td class="cell100 column1"> Medical Helpline in Andhra Pradesh,
-                                        Gujarat,Uttarakhand,Goa,Tamil Nadu, Rajasthan,Karnataka,Assam,Meghalaya, M.P and
-                                        U.P </td>
-                                    <td class="cell100 column2"> 108 </td>
-                                </tr>
-                                <tr class="row100 body">
-                                    <td class="cell100 column1"> Railway Accident Emergency Service </td>
-                                    <td class="cell100 column2"> 1072 </td>
-                                </tr>
-                                <tr class="row100 body">
-                                    <td class="cell100 column1"> Road Accident Emergency Service </td>
-                                    <td class="cell100 column2"> 1073 </td>
-                                </tr>
-                                <tr class="row100 body">
-                                    <td class="cell100 column1"> Road Accident Emergency Service On National Highway For
-                                        Private Operators </td>
-                                    <td class="cell100 column2"> 1033 </td>
-                                </tr>
-                                <tr class="row100 body">
-                                    <td class="cell100 column1"> ORBO Centre, AIIMS (For Donation Of Organ) Delhi </td>
-                                    <td class="cell100 column2"> 1060 </td>
-                                </tr>
-                                <tr class="row100 body">
-                                    <td class="cell100 column1"> Kisan Call Centre </td>
-                                    <td class="cell100 column2"> 1551 </td>
-                                </tr>
-                                <tr class="row100 body">
-                                    <td class="cell100 column1"> Relief Commissioner For Natural Calamities </td>
-                                    <td class="cell100 column2"> 1070 </td>
-                                </tr>
-                                <tr class="row100 body">
-                                    <td class="cell100 column1"> Children In Difficult Situation </td>
-                                    <td class="cell100 column2"> 1098 </td>
-                                </tr>
-                                <tr class="row100 body">
-                                    <td class="cell100 column1"> All India Institute of Medical Sciences (AIIMS) Poision
-                                        Control ( 24*7 ) </td>
-                                    <td class="cell100 column2"> 011-26593677, 26589391, 26583282 </td>
-                                </tr>
-                                <tr class="row100 body">
-                                    <td class="cell100 column1"> Poision Information Centre ( CMC , Vellore ) </td>
-                                    <td class="cell100 column2"> 18004251213 </td>
-                                </tr>
-                                <tr class="row100 body">
-                                    <td class="cell100 column1"> Tourist Helpline </td>
-                                    <td class="cell100 column2"> 1363 or 1800111363 </td>
-                                </tr>
-                                <tr class="row100 body">
-                                    <td class="cell100 column1"> LPG Leak Helpline </td>
-                                    <td class="cell100 column2"> 1906 </td>
-                                </tr>
-                                <tr class="row100 body">
-                                    <td class="cell100 column1"> KIRAN MENTAL HEALTH Helpline </td>
-                                    <td class="cell100 column2"> 18005990019 </td>
-                                </tr>
-                            </tbody>
-                        </table>
-                        <div class="ps__rail-x" style="left: 0px; bottom: 0px;">
-                            <div class="ps__thumb-x" tabindex="0" style="left: 0px; width: 0px;"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <div class="table-responsive">
+        <table class="table table-dark table-striped table-sm table-bordered" id='tblEmergencyNumbers'>
+            <thead>
+                <tr class="row100 head">
+                    <th class="cell100 column1">Service Name</th>
+                    <th class="cell100 column2">Number</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr class="row100 body">
+                    <td class="cell100 column1"> NATIONAL EMERGENCY NUMBER </td>
+                    <td class="cell100 column2"> 112 </td>
+                </tr>
+                <tr class="row100 body">
+                    <td class="cell100 column1"> POLICE </td>
+                    <td class="cell100 column2"> 100 </td>
+                </tr>
+                <tr class="row100 body">
+                    <td class="cell100 column1"> FIRE </td>
+                    <td class="cell100 column2"> 101 </td>
+                </tr>
+                <tr class="row100 body">
+                    <td class="cell100 column1"> AMBULANCE </td>
+                    <td class="cell100 column2"> 102 </td>
+                </tr>
+                <tr class="row100 body">
+                    <td class="cell100 column1"> Disaster Management Services </td>
+                    <td class="cell100 column2"> 108 </td>
+                </tr>
+                <tr class="row100 body">
+                    <td class="cell100 column1"> Women Helpline </td>
+                    <td class="cell100 column2"> 1091 </td>
+                </tr>
+                <tr class="row100 body">
+                    <td class="cell100 column1"> Women Helpline - ( Domestic Abuse ) </td>
+                    <td class="cell100 column2"> 181 </td>
+                </tr>
+                <tr class="row100 body">
+                    <td class="cell100 column1"> Air Ambulance </td>
+                    <td class="cell100 column2"> 9540161344 </td>
+                </tr>
+                <tr class="row100 body">
+                    <td class="cell100 column1"> Aids Helpline </td>
+                    <td class="cell100 column2"> 1097 </td>
+                </tr>
+                <tr class="row100 body">
+                    <td class="cell100 column1"> Anti Poison ( New Delhi ) </td>
+                    <td class="cell100 column2"> 1066 or 011-1066 </td>
+                </tr>
+                <tr class="row100 body">
+                    <td class="cell100 column1"> Disaster Management ( N.D.M.A ) : 011-26701728
+                    </td>
+                    <td class="cell100 column2"> 1078 </td>
+                </tr>
+                <tr class="row100 body">
+                    <td class="cell100 column1"> EARTHQUAKE / FLOOD / DISASTER ( N.D.R.F Headquaters
+                        )
+                        NDRF HELPLINE NO : </td>
+                    <td class="cell100 column2"> 011-24363260 9711077372 </td>
+                </tr>
+                <tr class="row100 body">
+                    <td class="cell100 column1"> Deputy Commissioner Of Police – Missing Child And
+                        Women
+                    </td>
+                    <td class="cell100 column2"> 1094 </td>
+                </tr>
+                <tr class="row100 body">
+                    <td class="cell100 column1"> Railway Enquiry </td>
+                    <td class="cell100 column2"> 139 </td>
+                </tr>
+                <tr class="row100 body">
+                    <td class="cell100 column1"> Senior Citizen Helpline </td>
+                    <td class="cell100 column2"> 1091 , 1291 </td>
+                </tr>
+                <tr class="row100 body">
+                    <td class="cell100 column1"> Medical Helpline in Andhra Pradesh,
+                        Gujarat,Uttarakhand,Goa,Tamil Nadu, Rajasthan,Karnataka,Assam,Meghalaya, M.P
+                        and
+                        U.P </td>
+                    <td class="cell100 column2"> 108 </td>
+                </tr>
+                <tr class="row100 body">
+                    <td class="cell100 column1"> Railway Accident Emergency Service </td>
+                    <td class="cell100 column2"> 1072 </td>
+                </tr>
+                <tr class="row100 body">
+                    <td class="cell100 column1"> Road Accident Emergency Service </td>
+                    <td class="cell100 column2"> 1073 </td>
+                </tr>
+                <tr class="row100 body">
+                    <td class="cell100 column1"> Road Accident Emergency Service On National Highway
+                        For
+                        Private Operators </td>
+                    <td class="cell100 column2"> 1033 </td>
+                </tr>
+                <tr class="row100 body">
+                    <td class="cell100 column1"> ORBO Centre, AIIMS (For Donation Of Organ) Delhi
+                    </td>
+                    <td class="cell100 column2"> 1060 </td>
+                </tr>
+                <tr class="row100 body">
+                    <td class="cell100 column1"> Kisan Call Centre </td>
+                    <td class="cell100 column2"> 1551 </td>
+                </tr>
+                <tr class="row100 body">
+                    <td class="cell100 column1"> Relief Commissioner For Natural Calamities </td>
+                    <td class="cell100 column2"> 1070 </td>
+                </tr>
+                <tr class="row100 body">
+                    <td class="cell100 column1"> Children In Difficult Situation </td>
+                    <td class="cell100 column2"> 1098 </td>
+                </tr>
+                <tr class="row100 body">
+                    <td class="cell100 column1"> All India Institute of Medical Sciences (AIIMS)
+                        Poision
+                        Control ( 24*7 ) </td>
+                    <td class="cell100 column2"> 011-26593677, 26589391, 26583282 </td>
+                </tr>
+                <tr class="row100 body">
+                    <td class="cell100 column1"> Poision Information Centre ( CMC , Vellore ) </td>
+                    <td class="cell100 column2"> 18004251213 </td>
+                </tr>
+                <tr class="row100 body">
+                    <td class="cell100 column1"> Tourist Helpline </td>
+                    <td class="cell100 column2"> 1363 or 1800111363 </td>
+                </tr>
+                <tr class="row100 body">
+                    <td class="cell100 column1"> LPG Leak Helpline </td>
+                    <td class="cell100 column2"> 1906 </td>
+                </tr>
+                <tr class="row100 body">
+                    <td class="cell100 column1"> KIRAN MENTAL HEALTH Helpline </td>
+                    <td class="cell100 column2"> 18005990019 </td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 
 
@@ -534,7 +530,7 @@
     </script>
 
 
-    <link href="css/tableView.css" rel="stylesheet" />
+    <!-- <link href="css/tableView.css" rel="stylesheet" /> -->
     <style>
         .invisible {
             display: none !important;
@@ -559,17 +555,7 @@
             font-weight: bolder;
         }
 
-        .limiter,
-        table,
-        .cell100,
-        .row100,
-        .head,
-        .column1,
-        .column2,
-        .column3,
-        .column4 {
-            font-family: Calibri, 'Trebuchet MS' !important;
-        }
+
 
         .iFramecontainer {
             position: relative;
@@ -588,31 +574,6 @@
             right: 0;
             width: 100%;
             height: 100%;
-        }
-
-        .container-table100 {
-            min-height: 10vh;
-            padding: 10px !important;
-        }
-
-        .column1 {
-            width: 16%;
-        }
-
-        .column2 {
-            width: 9%;
-        }
-
-        .column3 {
-            width: 12%;
-        }
-
-        .column4 {
-            width: 8%;
-        }
-
-        .column5 {
-            width: 13%;
         }
     </style>
 </body>
