Image Changes Rishikesh Solved

--- a/travel_destination.html
+++ b/travel_destination.html
@@ -25,7 +25,11 @@
     <link rel="stylesheet" href="css/slicknav.css">
     <link rel="stylesheet" href="css/style.css">
 
-
+    <style>
+        .fixedSize {
+            height: 200px !important;
+        }
+    </style>
 </head>
 
 <body>
@@ -103,7 +107,8 @@
 
                                     <div class="social_links d-none d-xl-block">
                                         <ul>
-                                            <li><a href="https://www.instagram.com/touristguide2021/" target="_blank"> <i class="fa fa-instagram"></i> </a></li>
+                                            <li><a href="https://www.instagram.com/touristguide2021/" target="_blank">
+                                                    <i class="fa fa-instagram"></i> </a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -268,9 +273,10 @@
                         <div class="col-lg-6 col-md-6">
                             <div class="single_place">
                                 <div class="thumb">
-                                    <img data-cfsrc="img/place/1.png" alt
-                                        style="display:none;visibility:hidden;"><noscript><img src="img/place/1.png"
-                                            alt></noscript>
+                                    <img data-cfsrc="img/place/1.png" alt  class='fixedSize' 
+                                        style="display:none;visibility:hidden;"><noscript>
+                                        <img src="img/place/1.png" class='fixedSize' alt>
+                                    </noscript>
                                     <a href="#" class="prise"></a>
                                 </div>
                                 <div class="place_info">
@@ -298,9 +304,10 @@
                         <div class="col-lg-6 col-md-6">
                             <div class="single_place">
                                 <div class="thumb">
-                                    <img data-cfsrc="img/place/2.png" alt
-                                        style="display:none;visibility:hidden;"><noscript><img src="img/place/2.png"
-                                            alt></noscript>
+                                    <img data-cfsrc="img/place/2.png" alt  class='fixedSize' 
+                                        style="display:none;visibility:hidden;"><noscript>
+                                        <img src="img/place/2.png" class='fixedSize' alt>
+                                    </noscript>
                                     <a href="#" class="prise"></a>
                                 </div>
                                 <div class="place_info">
@@ -328,9 +335,9 @@
                         <div class="col-lg-6 col-md-6">
                             <div class="single_place">
                                 <div class="thumb">
-                                    <img data-cfsrc="img/place/3.png" alt
+                                    <img data-cfsrc="img/place/3.png" alt  class='fixedSize' 
                                         style="display:none;visibility:hidden;"><noscript><img src="img/place/3.png"
-                                            alt></noscript>
+                                            class='fixedSize' alt></noscript>
                                     <a href="#" class="prise"></a>
                                 </div>
                                 <div class="place_info">
@@ -358,9 +365,9 @@
                         <div class="col-lg-6 col-md-6">
                             <div class="single_place">
                                 <div class="thumb">
-                                    <img data-cfsrc="img/place/4.png" alt
+                                    <img data-cfsrc="img/place/4.png" alt  class='fixedSize' 
                                         style="display:none;visibility:hidden;"><noscript><img src="img/place/4.png"
-                                            alt></noscript>
+                                            class='fixedSize' alt></noscript>
                                     <a href="#" class="prise"></a>
                                 </div>
                                 <div class="place_info">
@@ -388,9 +395,9 @@
                         <div class="col-lg-6 col-md-6">
                             <div class="single_place">
                                 <div class="thumb">
-                                    <img data-cfsrc="img/place/5.png" alt
+                                    <img data-cfsrc="img/place/5.png" alt  class='fixedSize' 
                                         style="display:none;visibility:hidden;"><noscript><img src="img/place/5.png"
-                                            alt></noscript>
+                                            class='fixedSize' alt></noscript>
                                     <a href="#" class="prise"></a>
                                 </div>
                                 <div class="place_info">
@@ -418,9 +425,9 @@
                         <div class="col-lg-6 col-md-6">
                             <div class="single_place">
                                 <div class="thumb">
-                                    <img data-cfsrc="img/place/6.png" alt
+                                    <img data-cfsrc="img/place/6.png" alt  class='fixedSize' 
                                         style="display:none;visibility:hidden;"><noscript><img src="img/place/6.png"
-                                            alt></noscript>
+                                            class='fixedSize' alt></noscript>
                                     <a href="#" class="prise"></a>
                                 </div>
                                 <div class="place_info">
@@ -635,7 +642,7 @@
                             <h3 class="footer_title">
                                 Instagram
                             </h3>
-                            <div class="instagram_feed" id='instagram_feed2'>                                
+                            <div class="instagram_feed" id='instagram_feed2'>
                             </div>
                         </div>
                     </div>
